crates/hl7v2-parser/tests/snapshots/snapshot_tests__batch_structure.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: parsed_batch
---
header:
  id:
    - 66
    - 72
    - 83
  fields:
    - reps:
        - comps:
            - subs:
                - Text: ""
            - subs:
                - Text: ""
        - comps:
            - subs:
                - Text: "\\"
                - Text: ""
    - reps:
        - comps:
            - subs:
                - Text: App
    - reps:
        - comps:
            - subs:
                - Text: Fac
    - reps:
        - comps:
            - subs:
                - Text: ""
    - reps:
        - comps:
            - subs:
                - Text: ""
    - reps:
        - comps:
            - subs:
                - Text: "20250128120000"
messages:
  - delims:
      field: "|"
      comp: ^
      rep: "~"
      esc: "\\"
      sub: "&"
    segments:
      - id:
          - 77
          - 83
          - 72
        fields:
          - reps:
              - comps:
                  - subs:
                      - Text: "^~\\&"
          - reps:
              - comps:
                  - subs:
                      - Text: App
          - reps:
              - comps:
                  - subs:
                      - Text: Fac
          - reps:
              - comps:
                  - subs:
                      - Text: Recv
          - reps:
              - comps:
                  - subs:
                      - Text: RecvFac
          - reps:
              - comps:
                  - subs:
                      - Text: "20250128120000"
          - reps:
              - comps:
                  - subs:
                      - Text: ""
          - reps:
              - comps:
                  - subs:
                      - Text: ADT
                  - subs:
                      - Text: A01
          - reps:
              - comps:
                  - subs:
                      - Text: MSG1
          - reps:
              - comps:
                  - subs:
                      - Text: P
          - reps:
              - comps:
                  - subs:
                      - Text: "2.5"
      - id:
          - 80
          - 73
          - 68
        fields:
          - reps:
              - comps:
                  - subs:
                      - Text: "1"
          - reps:
              - comps:
                  - subs:
                      - Text: ""
          - reps:
              - comps:
                  - subs:
                      - Text: "123"
          - reps:
              - comps:
                  - subs:
                      - Text: ""
          - reps:
              - comps:
                  - subs:
                      - Text: Patient1
    charsets: []
  - delims:
      field: "|"
      comp: ^
      rep: "~"
      esc: "\\"
      sub: "&"
    segments:
      - id:
          - 77
          - 83
          - 72
        fields:
          - reps:
              - comps:
                  - subs:
                      - Text: "^~\\&"
          - reps:
              - comps:
                  - subs:
                      - Text: App
          - reps:
              - comps:
                  - subs:
                      - Text: Fac
          - reps:
              - comps:
                  - subs:
                      - Text: Recv
          - reps:
              - comps:
                  - subs:
                      - Text: RecvFac
          - reps:
              - comps:
                  - subs:
                      - Text: "20250128120001"
          - reps:
              - comps:
                  - subs:
                      - Text: ""
          - reps:
              - comps:
                  - subs:
                      - Text: ADT
                  - subs:
                      - Text: A01
          - reps:
              - comps:
                  - subs:
                      - Text: MSG2
          - reps:
              - comps:
                  - subs:
                      - Text: P
          - reps:
              - comps:
                  - subs:
                      - Text: "2.5"
      - id:
          - 80
          - 73
          - 68
        fields:
          - reps:
              - comps:
                  - subs:
                      - Text: "1"
          - reps:
              - comps:
                  - subs:
                      - Text: ""
          - reps:
              - comps:
                  - subs:
                      - Text: "456"
          - reps:
              - comps:
                  - subs:
                      - Text: ""
          - reps:
              - comps:
                  - subs:
                      - Text: Patient2
    charsets: []
trailer:
  id:
    - 66
    - 84
    - 83
  fields:
    - reps:
        - comps:
            - subs:
                - Text: "2"
