crates/hl7v2-parser/tests/snapshots/snapshot_tests__complex_field_structure.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: message
---
delims:
  field: "|"
  comp: ^
  rep: "~"
  esc: "\\"
  sub: "&"
segments:
  - id:
      - 77
      - 83
      - 72
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "^~\\&"
      - reps:
          - comps:
              - subs:
                  - Text: App
      - reps:
          - comps:
              - subs:
                  - Text: Fac
      - reps:
          - comps:
              - subs:
                  - Text: Recv
      - reps:
          - comps:
              - subs:
                  - Text: RecvFac
      - reps:
          - comps:
              - subs:
                  - Text: "20250128120000"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ADT
              - subs:
                  - Text: A01
      - reps:
          - comps:
              - subs:
                  - Text: MSG123
      - reps:
          - comps:
              - subs:
                  - Text: P
      - reps:
          - comps:
              - subs:
                  - Text: "2.5"
  - id:
      - 80
      - 73
      - 68
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "1"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "123"
                  - Text: MR
                  - Text: HOSP
              - subs:
                  - Text: ""
              - subs:
                  - Text: ""
              - subs:
                  - Text: HOSP
              - subs:
                  - Text: MR
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: Doe
              - subs:
                  - Text: John
              - subs:
                  - Text: Adam
              - subs:
                  - Text: III
              - subs:
                  - Text: Sr.
          - comps:
              - subs:
                  - Text: Smith
              - subs:
                  - Text: Jane
              - subs:
                  - Text: Marie
              - subs:
                  - Text: Jr.
              - subs:
                  - Text: Dr.
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "19800101"
      - reps:
          - comps:
              - subs:
                  - Text: M
charsets: []
