crates/hl7v2-parser/tests/snapshots/snapshot_tests__custom_delimiters.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: message.delims
---
field: "#"
comp: $
rep: "*"
esc: "@"
sub: "!"
