crates/hl7v2-parser/tests/snapshots/snapshot_tests__fully_populated_message.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: message
---
delims:
  field: "|"
  comp: ^
  rep: "~"
  esc: "\\"
  sub: "&"
segments:
  - id:
      - 77
      - 83
      - 72
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "^~\\&"
      - reps:
          - comps:
              - subs:
                  - Text: SendingApp
      - reps:
          - comps:
              - subs:
                  - Text: SendingFac
      - reps:
          - comps:
              - subs:
                  - Text: ReceivingApp
      - reps:
          - comps:
              - subs:
                  - Text: ReceivingFac
      - reps:
          - comps:
              - subs:
                  - Text: 20250128152312+0000
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ADT
              - subs:
                  - Text: A01
              - subs:
                  - Text: ADT_A01
      - reps:
          - comps:
              - subs:
                  - Text: ABC123
      - reps:
          - comps:
              - subs:
                  - Text: P
      - reps:
          - comps:
              - subs:
                  - Text: 2.5.1
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: AL
      - reps:
          - comps:
              - subs:
                  - Text: NE
      - reps:
          - comps:
              - subs:
                  - Text: ASCII
  - id:
      - 69
      - 86
      - 78
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: A01
      - reps:
          - comps:
              - subs:
                  - Text: 20250128152312+0000
      - reps:
          - comps:
              - subs:
                  - Text: "20250128160000"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: DOC123
              - subs:
                  - Text: Smith
              - subs:
                  - Text: Jane
              - subs:
                  - Text: ""
              - subs:
                  - Text: ""
              - subs:
                  - Text: ""
              - subs:
                  - Text: MD
              - subs:
                  - Text: ""
              - subs:
                  - Text: ""
              - subs:
                  - Text: NPI
              - subs:
                  - Text: "12345"
  - id:
      - 80
      - 73
      - 68
    fields:
      - reps:
          - comps:
              - subs:
                  - Text: "1"
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "123456"
              - subs:
                  - Text: ""
              - subs:
                  - Text: ""
              - subs:
                  - Text: HOSP
              - subs:
                  - Text: MR
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: Doe
              - subs:
                  - Text: John
              - subs:
                  - Text: Adam
              - subs:
                  - Text: III
              - subs:
                  - Text: Sr.
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "19800101"
      - reps:
          - comps:
              - subs:
                  - Text: M
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: C
      - reps:
          - comps:
              - subs:
                  - Text: 123 Main St
              - subs:
                  - Text: Apt 4B
              - subs:
                  - Text: Anytown
              - subs:
                  - Text: ST
              - subs:
                  - Text: "12345"
              - subs:
                  - Text: USA
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: (555)555-1212
      - reps:
          - comps:
              - subs:
                  - Text: (555)555-1213
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: E
      - reps:
          - comps:
              - subs:
                  - Text: S
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: ""
      - reps:
          - comps:
              - subs:
                  - Text: "123456789"
      - reps:
          - comps:
              - subs:
                  - Text: ""
charsets: []
