crates/hl7v2-parser/tests/snapshots/snapshot_tests__msh_segment.snap
---
source: crates/hl7v2-parser/tests/snapshot_tests.rs
expression: "&message.segments[0]"
---
id:
  - 77
  - 83
  - 72
fields:
  - reps:
      - comps:
          - subs:
              - Text: "^~\\&"
  - reps:
      - comps:
          - subs:
              - Text: SendingApp
  - reps:
      - comps:
          - subs:
              - Text: SendingFac
  - reps:
      - comps:
          - subs:
              - Text: ReceivingApp
  - reps:
      - comps:
          - subs:
              - Text: ReceivingFac
  - reps:
      - comps:
          - subs:
              - Text: "20250128152312"
  - reps:
      - comps:
          - subs:
              - Text: ""
  - reps:
      - comps:
          - subs:
              - Text: ADT
          - subs:
              - Text: A01
          - subs:
              - Text: ADT_A01
  - reps:
      - comps:
          - subs:
              - Text: ABC123
  - reps:
      - comps:
          - subs:
              - Text: P
  - reps:
      - comps:
          - subs:
              - Text: 2.5.1
  - reps:
      - comps:
          - subs:
              - Text: ""
  - reps:
      - comps:
          - subs:
              - Text: ""
  - reps:
      - comps:
          - subs:
              - Text: AL
  - reps:
      - comps:
          - subs:
              - Text: NE
  - reps:
      - comps:
          - subs:
              - Text: ASCII
